Add RevokeAccessTokenRequest
