# generated/Client.php
@@ -20,13 +20,16 @@ class Client extends \Jane\OpenApiRuntime\Client\Psr18Client
         return $this->executePsr7Endpoint(new \Tesla\Api\Endpoint\CreateOauthToken($requestBody), $fetch);
     }
     /**
+     * Revokes the {access_token} issued by the token command
+     *
+     * @param \Tesla\Api\Model\RevokeAccessTokenRequest $requestBody 
      * @param string $fetch Fetch mode to use (can be OBJECT or RESPONSE)
      *
      * @return null|\Psr\Http\Message\ResponseInterface
      */
-    public function revokeOauthToken(string $fetch = self::FETCH_OBJECT)
+    public function revokeOauthToken(\Tesla\Api\Model\RevokeAccessTokenRequest $requestBody, string $fetch = self::FETCH_OBJECT)
     {
-        return $this->executePsr7Endpoint(new \Tesla\Api\Endpoint\RevokeOauthToken(), $fetch);
+        return $this->executePsr7Endpoint(new \Tesla\Api\Endpoint\RevokeOauthToken($requestBody), $fetch);
     }
     /**
      * @param string $fetch Fetch mode to use (can be OBJECT or RESPONSE)
