# generated/Endpoint/RevokeOauthToken.php
@@ -4,6 +4,15 @@ namespace Tesla\Api\Endpoint;
 
 class RevokeOauthToken extends \Jane\OpenApiRuntime\Client\BaseEndpoint implements \Jane\OpenApiRuntime\Client\Psr7Endpoint
 {
+    /**
+     * Revokes the {access_token} issued by the token command
+     *
+     * @param \Tesla\Api\Model\RevokeAccessTokenRequest $requestBody 
+     */
+    public function __construct(\Tesla\Api\Model\RevokeAccessTokenRequest $requestBody)
+    {
+        $this->body = $requestBody;
+    }
     use \Jane\OpenApiRuntime\Client\Psr7EndpointTrait;
     public function getMethod() : string
     {
@@ -15,6 +24,9 @@ class RevokeOauthToken extends \Jane\OpenApiRuntime\Client\BaseEndpoint implemen
     }
     public function getBody(\Symfony\Component\Serializer\SerializerInterface $serializer, $streamFactory = null) : array
     {
+        if ($this->body instanceof \Tesla\Api\Model\RevokeAccessTokenRequest) {
+            return array(array('Content-Type' => array('application/json')), $serializer->serialize($this->body, 'json'));
+        }
         return array(array(), null);
     }
     /**
